# mecab

./: .gitignore
.github/workflows/: build.py  build.yml
mecab/: make.bat  makeclean.bat  mecab.iss  mecab64.iss  prepare_installer.bat
mecab/csharp/: MeCabPINVOKE.cs  MeCab_wrap.cxx  Node.cs  Path.cs
mecab/java/: MeCab_wrap.cxx
mecab/java/org/chasen/mecab/: MeCabJNI.java  Node.java  Path.java
mecab/perl/: MeCab.pm  MeCab_wrap.cxx
mecab/python/: CONTRIBUTING.md  MANIFEST.in  MeCab_wrap.cxx  README.md  README.rst  setup.py  setup64.py  test.py
mecab/python_windows/: setup.py  test.py
mecab/ruby/: MeCab_wrap.cpp
mecab/src/: CMakeLists.txt  Makefile.msvc.in  VC-LTL helper for cmake.cmake  common.h  dictionary.cpp  feature_index.cpp  mecab.h  mmap.h  utils.cpp  utils.h  writer.cpp
mecab/swig/: Makefile  MeCab.i
